--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,7 @@ body{
     height: 100;
     overflow: hidden;
 }
-.score{
-    text-align: center;
-    font-size: 36px;
-    margin-bottom: 2rem;
 
-}
 
 .playground > ul {
     border: 1px solid #333;
@@ -40,4 +35,19 @@ body{
 }
 .tree{
     background: #67c23a;
+}
+.bar{
+    background: salmon;
+}
+.zee{
+    background: #e6a23c;
+}
+.elLeft{
+    background: #8e44ad;
+}
+.elRight{
+    background: #16a085;
+}
+.square{
+    background: skyblue;
 }
